REST e-commerce test
